tests/baselines/reference/restElementWithAssignmentPattern4.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern4.ts(3,18): error TS2339: Property 'b' does not exist on type '[string, number]'.


==== tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern4.ts (1 errors) ====
    var a: string, b: number;
    var tuple: [string, number] = ["", 1];
    [...{ 0: a = "", b }] = tuple;
                     ~
!!! error TS2339: Property 'b' does not exist on type '[string, number]'.